# rsult

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
src/rsult/: __init__.py  api.py  core.py  types.py
src/tests/: test_unit.py
